<resources>
    <string name="app_name">Couch Potato</string>
    <string name="couch_potato">Couch Potato</string>
    <string name="not_registered_yet_sign_up_here"><u>Not registered yet? Sign up here</u></string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here"><u>Already Have An Account? Login Here</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>
    <string name="tap_to_select_streaming_services">Tap to select the streaming services you are subscribed to.</string>
    <string name="streaming_subscriptions">Streaming Subscriptions</string>
    <string name="hint_search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="my_account">My Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="recommend">Recommend</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password...</string>
    <string name="new_name">New Name...</string>
    <string name="edit_name">Change Name</string>
    <string name="title">Title</string>
    <string name="content_summary_lorem_ipsum">Content Summary, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus mi quis placerat venenatis. Aenean egestas nisi enim, in dapibus neque euismod venenatis.</string>
    <string name="mpaa_rating">MPAA Rating</string>
    <string name="review_score">Review Score</string>
    <string name="g">G</string>
    <string name="_80">80%</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="thx">Thanks for Sharing!</string>

</resources>