<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/streaming-subscription-layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/account_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/account"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/streaming_subscriptions_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato"
        android:text="@string/streaming_subscriptions"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_heading" />

    <ImageView
        android:id="@+id/live_tv_icon"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_live_tv"
        app:layout_constraintEnd_toStartOf="@+id/streaming_subscriptions_heading"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_heading" />

    <TextView
        android:id="@+id/streaming_subs_instructions"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/tap_to_select_streaming_services"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streaming_subscriptions_heading" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_marginTop="156dp"
        android:background="@drawable/ic_arrow_back_ios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streaming_subs_instructions" />

    <GridView
        android:id="@+id/streamingServiceLogoGridview"
        android:layout_width="275dp"
        android:layout_height="350dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streaming_subs_instructions"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>